--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <!--Navigation section-->
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <div class="container">
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark navbar-fixed-top">
+        <div class="container-fluid">
             <a class="navbar-brand" href="#">Free Minds</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
