--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </nav>
 
      <!--Landing page section-->
-     <section class="landing-page">
+    <section class="landing-page">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-left">
@@ -62,6 +62,21 @@
             </div>
         </div>
     </section>
+
+    <!--About section-->
+    <section id="about" class="about">
+        <div class="container">
+            <div class="row">
+                <div class="col ">
+                    <h2>About Us</h2>
+                    <p>At Free Minds, our mission is to provide compassionate support, resources, and guidance to individuals navigating mental health challenges. We believe that everyone deserves access to quality mental health care and support, regardless of their background or circumstances. Our goal is to foster a supportive community where individuals can find understanding, encouragement, and hope on their journey towards mental well-being</p>
+                    <h3>Our Approach</h3>
+                    <p>We offer peer support,professional guidance and educational resources.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>  
 </body>
