--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css" integrity="sha384-BY+fdrpOd3gfeRvTSMT+VUZmA728cfF9Z2G42xpaRkUGu2i3DyzpTURDo5A6CaLK" crossorigin="anonymous">
 
     <title>FREE MINDS</title>
 </head>
@@ -28,9 +29,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#resources">Resources</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#doctors">Doctors</a>
-                    </li>
+                    
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
@@ -56,7 +55,7 @@
                 <div class="col-lg-12 text-left">
                     <h1>Welcome to Free Minds</h1>
                     <p>We are a Mental Health Support Network here to provide you with the support you need.</p>
-                    <a href="#resources" class="btn btn-primary btn-lg">Get Started</a>
+                    <a href="#resources" class="btn btn-primary btn-lg btn-outline-round">Get Started</a>
                     
                 </div>
             </div>
@@ -67,15 +66,56 @@
     <section id="about" class="about">
         <div class="container">
             <div class="row">
-                <div class="col ">
+                <div class="col-lg-6">
                     <h2>About Us</h2>
                     <p>At Free Minds, our mission is to provide compassionate support, resources, and guidance to individuals navigating mental health challenges. We believe that everyone deserves access to quality mental health care and support, regardless of their background or circumstances. Our goal is to foster a supportive community where individuals can find understanding, encouragement, and hope on their journey towards mental well-being</p>
+                </div>
+                <div class="col-lg-6">
                     <h3>Our Approach</h3>
                     <p>We offer peer support,professional guidance and educational resources.</p>
                 </div>
             </div>
         </div>
     </section>
+
+    <!--Resources section-->
+    <section id="resources" class="resources">
+        <div class="container">
+            <h2>Resources</h2>
+            <div class="row">
+                <div class="col-4">
+                    <div class="card">
+                        <img src="" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">Support Groups.</h5>
+                            <p class="card-text">Find online or local support group for various mental health conditions.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card">
+                    <img src="" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Therapists.</h5>
+                        <p class="card-text">Search for licensed therapists.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card">
+                    <img src="" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Self-Help resources.</h5>
+                        <p class="card-text">Acess videos and articles for coping strategies.</p>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </div>
+    </section>
+
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>  
