--- a/index.html
+++ b/index.html
@@ -115,6 +115,29 @@
         </div>
     </section>
 
+    <!--Contacts section-->
+    <section id="contact">
+        <div class="container">
+            <h2>Contact Us</h2>
+            <!--contact form -->
+            <form id="contact-form">
+                <div class="form-group">
+                    <label for="name">Name:</label>
+                    <input type="text" class="form-control" id="name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" class="form-control" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="message">Message:</label>
+                    <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>                
+            </form>
+        </div>
+    </section>
+
 
 
 
