--- a/index.html
+++ b/index.html
@@ -130,13 +130,24 @@
                     <input type="email" class="form-control" id="email" name="email" required>
                 </div>
                 <div class="form-group">
-                    <label for="message">Message:</label>
+                    <label for="message">Enter your message:</label>
                     <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>                
             </form>
         </div>
     </section>
+
+    <!--Footer section-->
+    <footer class="bg-dark text-white">
+        <div class="container">
+            <div class="row">
+                <div class="col text-center">
+                    <p>&copy;2024 Free Minds</p>
+                </div>            
+            </div>
+        </div>
+    </footer>
 
 
 
