adding syles and background color to the landing page

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-left">
+                    <img src="mental-health-2019924_1280.jpg" alt="backgroundpicture">
                     <h1>Welcome to Free Minds</h1>
                     <p>We are a Mental Health Support Network here to provide you with the support you need.</p>
                     <a href="#resources" class="btn btn-primary btn-lg btn-outline-round">Get Started</a>
