--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
    
     <!--Navigation section-->
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark navbar-fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Free Minds</a>
+    <nav class="navbar navbar-expand-md  navbar-dark bg-dark fixed-top ">
+        <div class="container">
+            <a class="navbar-brand" href="#">Logo</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Home</a>
@@ -33,15 +33,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item ">
                         <a class="nav-link" href="#login">Login</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item ">
                         <button id="signup" class="btn btn-outline-success btn-sm ">
                             <a class="nav-link" href="#signup">SignUp</a>
-                        </button>
-                        
-                        
+                        </button>    
                     </li>
                 </ul>
             </div>
@@ -83,7 +81,7 @@
     <section id="resources" class="resources">
         <div class="container">
             <h2>Resources</h2>
-            <div class="row">
+            <div class="row ">
                 <div class="col-4">
                     <div class="card">
                         <img src="" class="card-img-top" alt="">
@@ -122,25 +120,25 @@
             <h2>Contact Us</h2>
             <!--contact form -->
             <form id="contact-form">
-                <div class="form-group">
+                <div class="form-group mb-2">
                     <label for="name">Name:</label>
                     <input type="text" class="form-control" id="name" name="name" required>
                 </div>
-                <div class="form-group">
+                <div class="form-group mb-2">
                     <label for="email">Email:</label>
                     <input type="email" class="form-control" id="email" name="email" required>
                 </div>
-                <div class="form-group">
+                <div class="form-group mb-2">
                     <label for="message">Enter your message:</label>
                     <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>                
+                <button type="submit" class="btn btn-primary mt-5 mb-5">Submit</button>                
             </form>
         </div>
     </section>
 
     <!--Footer section-->
-    <footer class="bg-dark text-white">
+    <footer class="bg-dark text-white fixed-bottom">
         <div class="container">
             <div class="row">
                 <div class="col text-center">
