adding styling on the about section

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="col-lg-6">
                     <h3>Our Approach</h3>
-                    <p>We offer peer support,professional guidance and educational resources.</p>
+                    <p>Peer support<br>Professional guidance<br>Educational resources.</p>
                 </div>
             </div>
         </div>
