--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css" integrity="sha384-BY+fdrpOd3gfeRvTSMT+VUZmA728cfF9Z2G42xpaRkUGu2i3DyzpTURDo5A6CaLK" crossorigin="anonymous">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
     <title>FREE MINDS</title>
 </head>
@@ -81,32 +81,35 @@
     <section id="resources" class="resources">
         <div class="container">
             <h2>Resources</h2>
-            <div class="row ">
-                <div class="col-4">
+            <div class="row mb-5">
+                <div class="col-lg-4">
                     <div class="card">
-                        <img src="" class="card-img-top" alt="">
+                        <img src="diverse-group-friends-female-therapist-with-tablet-group-therapy-session_13339-343240.jpg" class="card-img-top" alt="support group"width="auto">
                         <div class="card-body">
                             <h5 class="card-title">Support Groups.</h5>
                             <p class="card-text">Find online or local support group for various mental health conditions.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-4">
+                <div class="col-lg-4">
                 <div class="card">
-                    <img src="" class="card-img-top" alt="">
+                    <img src="person-sharing-feelings-emotions-therapy-session_23-2151074000.jpg" class="card-img-top" alt="therapy session">
                     <div class="card-body">
                         <h5 class="card-title">Therapists.</h5>
                         <p class="card-text">Search for licensed therapists.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-lg-4">
                 <div class="card">
-                    <img src="" class="card-img-top" alt="">
+                    <img src="beautiful-black-girl-is-engaged-gym_1157-24008.jpg" class="card-img-top" alt="working out">
                     <div class="card-body">
                         <h5 class="card-title">Self-Help resources.</h5>
                         <p class="card-text">Acess videos and articles for coping strategies.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
