--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Support Groups.</h5>
                             <p class="card-text">Find online or local support group for various mental health conditions.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="#" class="btn btn-primary">Find more</a>
 
                         </div>
                     </div>
@@ -99,7 +99,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Therapists.</h5>
                         <p class="card-text">Search for licensed therapists.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="#" class="btn btn-primary">Find more</a>
                     </div>
                 </div>
             </div>
@@ -109,7 +109,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Self-Help resources.</h5>
                         <p class="card-text">Acess videos and articles for coping strategies.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="#" class="btn btn-primary">Find more</a>
                     </div>
                 </div>
             </div>
