--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
     <title>FREE MINDS</title>
 </head>
@@ -121,22 +122,48 @@
     <section id="contact">
         <div class="container">
             <h2>Contact Us</h2>
-            <!--contact form -->
-            <form id="contact-form">
-                <div class="form-group mb-2">
-                    <label for="name">Name:</label>
-                    <input type="text" class="form-control" id="name" name="name" required>
+            <div class="row">
+                <div class="col-6">
+                    <!--contact form -->
+                    <form id="contact-form">
+                        <div class="form-group mb-2">
+                            <label for="name">Name:</label>
+                            <input type="text" class="form-control" id="name" name="name" required>
+                        </div>
+                        <div class="form-group mb-2">
+                            <label for="email">Email:</label>
+                            <input type="email" class="form-control" id="email" name="email" required>
+                        </div>
+                        <div class="form-group mb-2">
+                            <label for="message">Enter your message:</label>
+                            <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary mt-5 mb-5">Submit</button>                
+                    </form>
                 </div>
-                <div class="form-group mb-2">
-                    <label for="email">Email:</label>
-                    <input type="email" class="form-control" id="email" name="email" required>
+
+                <div class="col-6 text-center">
+                    <h5>Socials</h5>
+                        <div class="social-links">
+                            <ul>
+                                <li><a href="https://www.instagram.com" target="_blank" class="instagram-link">
+                                    <i class="fa fa-instagram"></i>
+                                    </a>
+                                </li>
+                                <li><a href="https://www.facebook.com" target="_blank" class="facebook-link">
+                                    <i class="fa fa-facebook"></i>
+                                    </a>
+                                </li>
+                                <li><a href="https://twitter.com/" target="_blank" class="twitter-link">
+                                    <i class="fa fa-twitter"></i>
+                                    </a>
+                                </li>
+                            </ul>    
+                        </div>
+
                 </div>
-                <div class="form-group mb-2">
-                    <label for="message">Enter your message:</label>
-                    <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary mt-5 mb-5">Submit</button>                
-            </form>
+            </div>
+            
         </div>
     </section>
 
