styling the social icons

--- a/index.html
+++ b/index.html
@@ -147,16 +147,24 @@
                         <div class="social-links">
                             <ul>
                                 <li><a href="https://www.instagram.com" target="_blank" class="instagram-link">
-                                    <i class="fa fa-instagram"></i>
+                                    <i class="fa fa-instagram fa-2x"></i>
                                     </a>
                                 </li>
                                 <li><a href="https://www.facebook.com" target="_blank" class="facebook-link">
-                                    <i class="fa fa-facebook"></i>
+                                    <i class="fa fa-facebook fa-2x"></i>
                                     </a>
                                 </li>
                                 <li><a href="https://twitter.com/" target="_blank" class="twitter-link">
-                                    <i class="fa fa-twitter"></i>
+                                    <i class="fa fa-twitter fa-2x"></i>
                                     </a>
+                                </li>
+                                <li><a href="+123 456 576">
+                                    <i class="fa fa-phone fa-2x"></i>
+                                <span>+123 456 789</span></a>
+                                </li>
+                                <li><a href="https://mail.google.com/mail">
+                                    <i class="fa fa-envelope fa-2x"></i>
+                                <span>freeminds@gmail.com</span></a>
                                 </li>
                             </ul>    
                         </div>
