Adding icons to the navigation bar.

--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="#">
-                            <i class="fa fa-house"></i>
-                            Home</a>
+                            <i class="fa fa-home mr-1"></i> Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#about">
-                            <i class="fa fa-circle-info "></i>
-                            About</a>
+                            <i class="fa fa-info-circle mr-1"></i> About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#resources">Resources</a>
+                        <a class="nav-link" href="#resources">
+                            <i class="fa fa-book mr-1"></i> Resources</a>
                     </li>
                     
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
+                        <a class="nav-link" href="#contact">
+                            <i class="fa fa-envelope mr-1"></i> Contact</a>
                     </li>
                    
                 </ul>
